--- a/.buildkite/build.rayci.yml
+++ b/.buildkite/build.rayci.yml
@@ -8,7 +8,6 @@ steps:
     commands:
       - bazel run //ci/ray_ci:build_in_docker -- wheel --python-version {{matrix}} --architecture x86_64
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
       - "3.11"
@@ -24,7 +23,6 @@ steps:
     commands:
       - bazel run //ci/ray_ci:build_in_docker -- wheel --python-version {{matrix}} --architecture aarch64
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
       - "3.11"
@@ -39,7 +37,7 @@ steps:
       - oss
     instance_type: medium
     commands:
-      - bazel run //ci/ray_ci:build_in_docker -- wheel --python-version 3.8 --build-type debug
+      - bazel run //ci/ray_ci:build_in_docker -- wheel --build-type debug
     depends_on:
       - manylinux
       - forge
@@ -57,7 +55,6 @@ steps:
       - export BUILD_ONE_PYTHON_ONLY={{matrix}}
       - bash /c/workdir/.buildkite/windows_ci.sh wheels
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
       - "3.11"
@@ -99,7 +96,6 @@ steps:
       - raycudabase
       - raycpubase
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
       - "3.11"
@@ -125,7 +121,6 @@ steps:
       - raycpubase-aarch64
     job_env: forge-aarch64
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
       - "3.11"
@@ -146,7 +141,6 @@ steps:
       - ray-mlcudabase
       - ray-mlcpubase
     matrix:
-      - "3.8"
       - "3.9"
       - "3.10"
 
