--- a/.buildkite/ml.rayci.yml
+++ b/.buildkite/ml.rayci.yml
@@ -2,11 +2,11 @@ group: ml tests
 steps:
   # builds
   - name: minbuild-ml
-    label: "wanda: minbuild-ml-py38"
+    label: "wanda: minbuild-ml-py39"
     wanda: ci/docker/min.build.wanda.yaml
     depends_on: oss-ci-base_build
     env:
-      PYTHON_VERSION: "3.8"
+      PYTHON_VERSION: "3.9"
       EXTRA_DEPENDENCY: ml
 
   - name: mlbuild
@@ -159,7 +159,7 @@ steps:
       - python ./ci/env/check_minimal_install.py
       - bazel run //ci/ray_ci:test_in_docker -- //python/ray/train/... ml
         --parallelism-per-worker 2
-        --build-name minbuild-ml-py3.8
+        --build-name minbuild-ml-py3.9
         --only-tags minimal
     depends_on: [ "minbuild-ml", "forge" ]
 
@@ -167,13 +167,13 @@ steps:
     tags: tune
     instance_type: medium
     commands:
-      - bazel run //ci/ray_ci:build_in_docker -- docker --python-version 3.8
-        --platform cpu --image-type ray --canonical-tag multinode-py38
-      - python ./ci/build/build-multinode-image.py rayproject/ray:multinode-py38 rayproject/ray:multinode-py38
+      - bazel run //ci/ray_ci:build_in_docker -- docker
+        --platform cpu --image-type ray --canonical-tag multinode
+      - python ./ci/build/build-multinode-image.py rayproject/ray:multinode rayproject/ray:multinode
       - bazel run //ci/ray_ci:test_in_docker -- //python/ray/tune/... ml 
         --only-tags multinode
         --test-env=RAY_HAS_SSH=1
-        --test-env=RAY_DOCKER_IMAGE=rayproject/ray:multinode-py38
+        --test-env=RAY_DOCKER_IMAGE=rayproject/ray:multinode
         --test-env=RAY_TEMPDIR="/ray-mount"
         --test-env=RAY_HOSTDIR="$${RAYCI_CHECKOUT_DIR}"
         --test-env=RAY_TESTHOST="rayci.localhost"
